initial version of fred-buffctl recipe

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -14,7 +14,7 @@ LAYERSERIES_COMPAT_meta-fred = "dunfell"
 
 # FRED related libs and apps
 IMAGE_INSTALL_append = " fred-lib"
-#IMAGE_INSTALL_append = " fred-tutorial"
+IMAGE_INSTALL_append = " fred-tutorial"
 #IMAGE_INSTALL_append = " fred-server"
 
 # FRED kernel modules
