--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -18,5 +18,5 @@ IMAGE_INSTALL_append = " fred-tutorial"
 #IMAGE_INSTALL_append = " fred-server"
 
 # FRED kernel modules
-#MACHINE_EXTRA_RDEPENDS += "kernel-module-fred_buffctl"
+MACHINE_EXTRA_RDEPENDS += "fred-buffctl"
 #MACHINE_EXTRA_RDEPENDS += "kernel-module-fpga_mgr_zynqmp_drv"
