fixing for petalinux 2020.1

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,13 +10,13 @@ BBFILE_PATTERN_meta-fred = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-fred = "7"
 
 LAYERDEPENDS_meta-fred = "core"
-LAYERSERIES_COMPAT_meta-fred = "dunfell"
+LAYERSERIES_COMPAT_meta-fred = "zeus"
 
 # FRED related libs and apps
 IMAGE_INSTALL_append = " fred-lib"
 IMAGE_INSTALL_append = " fred-tutorial"
-#IMAGE_INSTALL_append = " fred-server"
+IMAGE_INSTALL_append = " fred-server"
 
 # FRED kernel modules
-MACHINE_EXTRA_RDEPENDS += "fred-buffctl"
+#MACHINE_EXTRA_RDEPENDS += "fred-buffctl"
 #MACHINE_EXTRA_RDEPENDS += "kernel-module-fpga_mgr_zynqmp_drv"
