fix lics; minor fix in the recipes; conditional assingment for fpga-mgr based on the MACHINE variable: zynq or zynqmp

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,13 +10,24 @@ BBFILE_PATTERN_meta-fred = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-fred = "7"
 
 LAYERDEPENDS_meta-fred = "core"
-LAYERSERIES_COMPAT_meta-fred = "dunfell"
+LAYERSERIES_COMPAT_meta-fred = "zeus"
 
 # FRED related libs and apps
 IMAGE_INSTALL_append = " fred-lib"
 IMAGE_INSTALL_append = " fred-tutorial"
-#IMAGE_INSTALL_append = " fred-server"
+IMAGE_INSTALL_append = " fred-server"
+
+
+# one type of contitional assignment. Meaning, if the variable MACHINE includes the substr zynqmp, then the 1st value is assigned
+# See example in https://embeddedguruji.blogspot.com/2019/03/bbutilscontains-yocto.html
+#FPGA_MGR_MOD ?= '${@oe.utils.conditional("MACHINE", "zynqmp", "fpga-mgr-zynqmp-drv", "fpga-mgr-zynq-drv", d)}'
+
+# learn more about conditional assignment with OVERRIDES in 
+# https://www.yoctoproject.org/docs/current/bitbake-user-manual/bitbake-user-manual.html#conditional-syntax-overrides
+OVERRIDES = "zynqmp-generic:ultra96-zynqmp:zcu102-zynqmp:zynq-generic"
+FPGA_MGR_MOD = "fpga-mgr-zynqmp-drv" # default value
+FPGA_MGR_MOD_zynq-generic = "fpga-mgr-zynq-drv"
 
 # FRED kernel modules
 MACHINE_EXTRA_RDEPENDS += "fred-buffctl"
-#MACHINE_EXTRA_RDEPENDS += "kernel-module-fpga_mgr_zynqmp_drv"
+MACHINE_EXTRA_RDEPENDS += "${FPGA_MGR_MOD}"
