--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -25,7 +25,8 @@ IMAGE_INSTALL_append = " fred-server"
 # learn more about conditional assignment with OVERRIDES in 
 # https://www.yoctoproject.org/docs/current/bitbake-user-manual/bitbake-user-manual.html#conditional-syntax-overrides
 OVERRIDES = "zynqmp-generic:ultra96-zynqmp:zcu102-zynqmp:zynq-generic"
-FPGA_MGR_MOD = "fpga-mgr-zynqmp-drv" # default value
+# default value
+FPGA_MGR_MOD = "fpga-mgr-zynqmp-drv"
 FPGA_MGR_MOD_zynq-generic = "fpga-mgr-zynq-drv"
 
 # FRED kernel modules
