incserting the kernel modules into the image

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -32,3 +32,5 @@ FPGA_MGR_MOD_zynq-generic = "fpga-mgr-zynq-drv"
 # FRED kernel modules
 MACHINE_EXTRA_RDEPENDS += "fred-buffctl"
 MACHINE_EXTRA_RDEPENDS += "${FPGA_MGR_MOD}"
+IMAGE_INSTALL_append = " fred-buffctl"
+IMAGE_INSTALL_append = " ${FPGA_MGR_MOD}"
