add dtc and nano. improv doc about DT

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -34,3 +34,6 @@ MACHINE_EXTRA_RDEPENDS += "fred-buffctl"
 MACHINE_EXTRA_RDEPENDS += "${FPGA_MGR_MOD}"
 IMAGE_INSTALL_append = " fred-buffctl"
 IMAGE_INSTALL_append = " ${FPGA_MGR_MOD}"
+
+# recommended tools
+IMAGE_INSTALL_append = " dtc nano"
