including postprocessing commmands to patch pcap device tree after image gen completion

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -37,3 +37,6 @@ IMAGE_INSTALL_append = " ${FPGA_MGR_MOD}"
 
 # recommended tools
 IMAGE_INSTALL_append = " dtc nano"
+
+# post-processing functions: deploy_manifest, patch_pcap_devicetree
+INHERIT += "post-process"
