add update_hw script to rootfs

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -35,8 +35,12 @@ MACHINE_EXTRA_RDEPENDS += "${FPGA_MGR_MOD}"
 IMAGE_INSTALL_append = " fred-buffctl"
 IMAGE_INSTALL_append = " ${FPGA_MGR_MOD}"
 
-# recommended tools
+# recommended tools. dtc is required to apply devicetree overlays in runtime
 IMAGE_INSTALL_append = " dtc nano"
 
 # post-processing functions: deploy_manifest, patch_pcap_devicetree
 INHERIT += "post-process"
+
+# autoload the kernel modules during startup
+#KERNEL_MODULE_AUTOLOAD += "fred-buffctl"
+#KERNEL_MODULE_AUTOLOAD += "${FPGA_MGR_MOD}"
