including sum-vec example

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,6 +15,7 @@ LAYERSERIES_COMPAT_meta-fred = "zeus"
 # FRED related libs and apps
 IMAGE_INSTALL_append = " fred-lib"
 IMAGE_INSTALL_append = " fred-tutorial"
+IMAGE_INSTALL_append = " sum-vec"
 IMAGE_INSTALL_append = " fred-server"
 
 
