vscode remote debugging with petalinux is working

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -51,3 +51,6 @@ EXTRA_IMAGE_FEATURES += " fpga-manager"
 # including package management feature
 EXTRA_IMAGE_FEATURES += " package-management "
 PACKAGE_FEED_URIS = "http://192.168.17.191:8000"
+
+# keep the fetched source code of these recipes
+RM_WORK_EXCLUDE += "fred-server fred-lib fred-tutorial sum-vec fred-buffctl ${FPGA_MGR_MOD}"
