fred-lib-dev is used instead of fred-lib to add the header file into the image

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,7 +13,9 @@ LAYERDEPENDS_meta-fred = "core"
 LAYERSERIES_COMPAT_meta-fred = "zeus"
 
 # FRED related libs and apps
-IMAGE_INSTALL_append = " fred-lib"
+
+# fred-lib-dev is used instead of fred-lib to include the header file
+IMAGE_INSTALL_append = " fred-lib-dev" 
 IMAGE_INSTALL_append = " fred-tutorial"
 IMAGE_INSTALL_append = " sum-vec"
 IMAGE_INSTALL_append = " fred-server"
