--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -14,7 +14,7 @@ LAYERSERIES_COMPAT_meta-fred = "zeus"
 
 # FRED related libs and apps
 
-# fred-lib-dev is used instead of fred-lib to include the header file
+# fred-lib-dev is used instead of fred-lib to add the header file into the image
 IMAGE_INSTALL_append = " fred-lib-dev" 
 IMAGE_INSTALL_append = " fred-tutorial"
 IMAGE_INSTALL_append = " sum-vec"
